--- a/styles.css
+++ b/styles.css
@@ -159,3 +159,28 @@ footer {
     margin-right: 8px;
     color: #007bff;
 }
+
+
+
+/* Add this to your styles.css */
+.hidden {
+    display: none;
+}
+
+button {
+    font-family: 'Cairo', sans-serif !important;
+    margin: 10px 5px;
+    padding: 10px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.btn-danger{
+    background-color: rgb(121, 12, 12);
+}
+.btn-danger:hover{
+    opacity: 80%;
+    background-color: rgb(121, 12, 12);
+
+}
+
